Implemented custom attribute handling.
 * custom attribute factory function has been implemented.
 * logger can now open record with exactly one attribute specified (overload).
 * simple tests has been written.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ SET(SOURCES
     test_FileSink
     test_Logger
     test_VerboseLogger
+    test_Attribute
 )
 
 ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
