Udp sink dummy added.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -18,6 +18,7 @@ SET(SOURCES
     test_Attribute
     test_Filter
     test_StringPatternParser
+    test_UdpSink
 )
 
 ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
