Syslog frontend specialization has been implemented.
Functional test for syslog-based logger has been written.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ SET(SOURCES
     test_UdpSink
     test_Manual
     test_SyslogSink
+    test_Functional
 )
 
 ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
