GCC 4.4. compatibility. Part 1.

--- a/src/blackhole/CMakeLists.txt
+++ b/src/blackhole/CMakeLists.txt
@@ -35,5 +35,5 @@ TARGET_LINK_LIBRARIES(${PROJECT}
 )
 
 SET_TARGET_PROPERTIES(${PROJECT} PROPERTIES ENABLE_EXPORTS true)
-ADD_DEFINITIONS(-std=c++11)
+ADD_DEFINITIONS(-std=c++0x)
 
