Exception trap has been implemented. Some bugs have been fixed.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -24,6 +24,7 @@ SET(SOURCES
     test_Functional
     test_FactoryInitialization
     test_JsonFormatter
+    test_ExceptionTrap.cpp
 )
 
 ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
