Benchmark subproject has been created. Test cleanup.

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -1,30 +1,14 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-SET(CMAKE_BUILD_TYPE "Debug")
+SET(CMAKE_BUILD_TYPE "Release")
 
-SET(PROJECT blackhole-tests)
+SET(PROJECT blackhole-benchmark)
 
 SET(HEADERS
-    Global.hpp
-    Mocks.hpp
 )
 
 SET(SOURCES
     main
-    test_StringFormatter
-    test_FileSink
-    test_Logger
-    test_VerboseLogger
-    test_Attribute
-    test_Filter
-    test_StringPatternParser
-    test_UdpSink
-    test_Manual
-    test_SyslogSink
-    test_Functional
-    test_FactoryInitialization
-    test_JsonFormatter
-    test_ExceptionTrap.cpp
 )
 
 ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
@@ -37,13 +21,12 @@ SET(BOOST_COMPONENTS
 )
 
 SET(GOOGLE_LIBRARIES
-    gtest
-    gmock
 )
 
 PROJECT(${PROJECT})
 
 INCLUDE_DIRECTORIES(../
+    /Users/esafronov/sandbox/Celero/include
 )
 
 FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
@@ -55,6 +38,7 @@ TARGET_LINK_LIBRARIES(${PROJECT}
     ${Boost_LIBRARIES}
     ${GOOGLE_LIBRARIES}
     blackhole
+    /Users/esafronov/sandbox/Celero/build/libcelero.dylib
 )
 
 ADD_DEFINITIONS(-std=c++0x)
