Added benchmark comparing with boost::log.
Sadly, it is 1.4 times slower :(. Some optimization needed.

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -18,6 +18,10 @@ SET(Boost_USE_MULTITHREADED ON)
 SET(BOOST_COMPONENTS
     system
     filesystem
+    thread
+    date_time
+    log
+    log_setup
 )
 
 SET(GOOGLE_LIBRARIES
