Testing and benchmarking can now be disabled.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,18 @@ SET(BLACKHOLE_VERSION_MINOR 0)
 SET(BLACKHOLE_VERSION_PATCH 1)
 SET(BLACKHOLE_VERSION "${BLACKHOLE_VERSION_MAJOR}.${BLACKHOLE_VERSION_MINOR}.${BLACKHOLE_VERSION_PATCH}")
 OPTION(BLACKHOLE_DEBUG "Enable debugging messages support" ON)
+OPTION(ENABLE_TESTING "Enable testing" ON)
+OPTION(ENABLE_BENCHMARKING "Enable benchmarking" OFF)
 
 CONFIGURE_FILE(
     "${PROJECT_SOURCE_DIR}/config.hpp.in"
     "${PROJECT_SOURCE_DIR}/src/blackhole/config.hpp"
 )
+
+IF(ENABLE_TESTING)
+    # Find GTEST and GMOCK frameworks
+    SET(GOOGLE_MOCK_SOURCE_DIR "" CACHE PATH "Path to the GMock source")
+ENDIF()
 
 ADD_SUBDIRECTORY(src)
 
