--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,16 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(src)
 
 ADD_SUBDIRECTORY(blackhole)
-ADD_SUBDIRECTORY(tests)
-ADD_SUBDIRECTORY(benchmark)
+
+IF(ENABLE_TESTING)
+    ENABLE_TESTING()
+    IF ("${GOOGLE_MOCK_SOURCE_DIR}" STREQUAL "" OR NOT EXISTS "${GOOGLE_MOCK_SOURCE_DIR}/CMakeLists.txt")
+        MESSAGE("Unit testing is disabled")
+    ELSE()
+        ADD_SUBDIRECTORY(tests)
+    ENDIF()
+ENDIF()
+
+IF(ENABLE_BENCHMARKING)
+    ADD_SUBDIRECTORY(benchmark)
+ENDIF()
