Minor project file changes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ CONFIGURE_FILE(
 )
 
 IF(ENABLE_TESTING)
+    ENABLE_TESTING()
     # Find GTEST and GMOCK frameworks
     SET(GOOGLE_MOCK_SOURCE_DIR "" CACHE PATH "Path to the GMock source")
 ENDIF()
