--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -60,4 +60,6 @@ TARGET_LINK_LIBRARIES(${PROJECT}
     json
 )
 
+add_test(NAME tblackhole-tests COMMAND blackhole-tests --verbose)
+
 ADD_DEFINITIONS(-std=c++0x)
