--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
  - cd ../..
 
 install:
- - sudo apt-get install -qq cdbs cmake libjsoncpp-dev libboost-dev libboost-filesystem-dev
+ - sudo apt-get install -qq cdbs cmake libboost-dev libboost-filesystem-dev
 
 before_script:
  - mkdir build && cd build
