Examples subproject added. Basic usage described.
Features:
 * logging macro.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,3 +14,7 @@ ENDIF()
 IF(ENABLE_BENCHMARKING)
     ADD_SUBDIRECTORY(benchmark)
 ENDIF()
+
+IF(ENABLE_EXAMPLES)
+    ADD_SUBDIRECTORY(examples)
+ENDIF()
