--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ SET(BLACKHOLE_VERSION_PATCH 1)
 SET(BLACKHOLE_VERSION "${BLACKHOLE_VERSION_MAJOR}.${BLACKHOLE_VERSION_MINOR}.${BLACKHOLE_VERSION_PATCH}")
 OPTION(BLACKHOLE_DEBUG "Enable debugging messages support" ON)
 OPTION(ENABLE_TESTING "Enable testing" ON)
+OPTION(ENABLE_EXAMPLES "Enable examples" ON)
 OPTION(ENABLE_BENCHMARKING "Enable benchmarking" OFF)
 
 CONFIGURE_FILE(
