Message pack tests are now more library independent.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -59,6 +59,7 @@ TARGET_LINK_LIBRARIES(${PROJECT}
     ${Boost_LIBRARIES}
     ${GOOGLE_LIBRARIES}
     blackhole
+    msgpack
 )
 
 ADD_TEST(NAME blackhole-tests COMMAND blackhole-tests)
