Adding rapidjson into include paths.

--- a/src/examples/default/CMakeLists.txt
+++ b/src/examples/default/CMakeLists.txt
@@ -24,6 +24,7 @@ PROJECT(${PROJECT})
 
 INCLUDE_DIRECTORIES(
     ../..
+    ../../../foreign/rapidjson/include
 )
 
 FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
