--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ SET(BLACKHOLE_VERSION "${BLACKHOLE_VERSION_MAJOR}.${BLACKHOLE_VERSION_MINOR}.${B
 OPTION(BLACKHOLE_DEBUG "Enable debugging messages support" ON)
 OPTION(ENABLE_TESTING "Enable testing" ON)
 OPTION(ENABLE_EXAMPLES "Enable examples" ON)
-OPTION(ENABLE_BENCHMARKING "Enable benchmarking" ON)
+OPTION(ENABLE_BENCHMARKING "Enable benchmarking" OFF)
 
 CONFIGURE_FILE(
     "${PROJECT_SOURCE_DIR}/config.hpp.in"
