--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(blackhole-examples)
 
+ADD_SUBDIRECTORY(trivial)
 ADD_SUBDIRECTORY(simple)
-ADD_SUBDIRECTORY(default)
 ADD_SUBDIRECTORY(logstash)
