--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -3,4 +3,5 @@ PROJECT(blackhole-examples)
 
 ADD_SUBDIRECTORY(trivial)
 ADD_SUBDIRECTORY(simple)
+ADD_SUBDIRECTORY(syslog)
 ADD_SUBDIRECTORY(logstash)
