--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ SET(BLACKHOLE_VERSION "${BLACKHOLE_VERSION_MAJOR}.${BLACKHOLE_VERSION_MINOR}.${B
 
 OPTION(BLACKHOLE_DEBUG "Enable debugging messages support" ON)
 OPTION(ENABLE_TESTING "Enable testing" ON)
-OPTION(ENABLE_EXAMPLES "Enable examples" OFF)
+OPTION(ENABLE_EXAMPLES "Enable examples" ON)
 OPTION(ENABLE_BENCHMARKING "Enable benchmarking" OFF)
 
 CONFIGURE_FILE(
