Massive renaming and code reordering.
Rotation named filter is replaced to its own file.
Tiny tests reorganization.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -34,6 +34,7 @@ SET(SOURCES
     test_Utils
     test_FileRotation
     test_FileRotationWatcher.cpp
+    test_FileRotationNaming.cpp
 )
 
 SET(Boost_USE_MULTITHREADED ON)
