Added example with initializing from file.

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -6,3 +6,4 @@ ADD_SUBDIRECTORY(simple)
 ADD_SUBDIRECTORY(files)
 ADD_SUBDIRECTORY(syslog)
 ADD_SUBDIRECTORY(logstash)
+ADD_SUBDIRECTORY(init-from-file)
