--- a/src/examples/init-from-file/config.json
+++ b/src/examples/init-from-file/config.json
@@ -6,9 +6,8 @@
                 "pattern": "[%(timestamp)s]: %(message)s (%(...L)s)"
             },
             "sink": {
-                "type": "files",
-                "path": "/dev/stdout",
-                "autoflush": true
+                "type": "stream",
+                "output": "stdout"
             }
         }
     ]
