--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -1,49 +1,4 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-SET(CMAKE_BUILD_TYPE "Release")
-
-SET(PROJECT blackhole-benchmark)
-
-SET(HEADERS
-)
-
-SET(SOURCES
-    main
-)
-
-ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
-
-SET(Boost_USE_MULTITHREADED ON)
-
-SET(BOOST_COMPONENTS
-    system
-    filesystem
-    thread
-    date_time
-    log
-    log_setup
-)
-
-SET(GOOGLE_LIBRARIES
-)
-
-PROJECT(${PROJECT})
-
-INCLUDE_DIRECTORIES(../
-    ../../foreign/rapidjson/include
-    /Users/esafronov/sandbox/Celero/include
-)
-
-FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
-
-ADD_EXECUTABLE(${PROJECT} ${HEADERS} ${SOURCES})
-
-TARGET_LINK_LIBRARIES(${PROJECT}
-    ${CMAKE_THREAD_LIBS_INIT}
-    ${Boost_LIBRARIES}
-    ${GOOGLE_LIBRARIES}
-    blackhole
-    /Users/esafronov/sandbox/Celero/build/libcelero.dylib
-)
-
-ADD_DEFINITIONS(-std=c++0x)
+ADD_SUBDIRECTORY(performance)
+#ADD_SUBDIRECTORY(vsboost)
