Added null sink.
It is useful for performance measuring.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -39,6 +39,7 @@ SET(SOURCES
     test_FileRotationSizeWatcher
     test_FileRotationDateTimeWatcher
     test_StreamSink
+    test_NullSink
 )
 
 SET(Boost_USE_MULTITHREADED ON)
