--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "foreign/rapidjson"]
 	path = foreign/rapidjson
-	url = https://github.com/andrusha97/rapidjson.git
+	url = git://github.com/andrusha97/rapidjson.git
