[Debianization] Reviewed. Using cmake install section instead of manual copying.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,3 +16,10 @@ ENDIF()
 IF(ENABLE_EXAMPLES)
     ADD_SUBDIRECTORY(examples)
 ENDIF()
+
+INSTALL(
+    DIRECTORY
+        blackhole/
+    DESTINATION include/blackhole
+    COMPONENT development
+)
