--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,8 @@
 #!/usr/bin/make -f
 
 include /usr/share/cdbs/1/rules/debhelper.mk
+include /usr/share/cdbs/1/class/cmake.mk
+
+DEB_CMAKE_EXTRA_FLAGS=-DBLACKHOLE_DEBUG=OFF -DENABLE_TESTING=OFF -DENABLE_EXAMPLES=OFF -DENABLE_BENCHMARKING=OFF
 
 install/blackhole-dev::
-	install -d $(DEB_DESTDIR)usr
-	install -d $(DEB_DESTDIR)usr/include
-	cp -R src/blackhole $(DEB_DESTDIR)usr/include/blackhole
