[API] Added synchronized logger decorator.
It owns logger object and makes its calls thread-safe by using stupid mutex implementation. In the future I’ll replace it by smart formatter-sink thread-safety determiner.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -47,6 +47,7 @@ SET(SOURCES
     test_Functional
     test_JsonFormatter
     test_Logger
+    test_LoggerSynchronized
     test_Macro
     test_Manual
     test_MsgpackFormatter
