[Unit Testing] Skeleton for keyword testing added.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -46,6 +46,7 @@ SET(SOURCES
     test_Filter
     test_Functional
     test_JsonFormatter
+    test_Keyword
     test_Logger
     test_LoggerSynchronized
     test_Macro
