Add scoped attributes.
scoped_attributes_t object automatically adds some attributes to all log messages in its scope.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -44,6 +44,7 @@ SET(SOURCES
     extra/ElasticsearchSink
     test_AttachableStream
     test_Attribute
+    test_AttributesGuard
     test_Config
     test_ConfigJsonInitialization
     test_ExceptionTrap
