[Elasticsearch] Added cluster nodes info request builder. [Elasticsearch] Nodes pool is now thread-safe. [Elasticsearch] Added maybe-idiom for response processing. [Elasticsearch] Balancer has been integrated.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -22,10 +22,12 @@ SET(HEADERS
     mocks/syslog.hpp
     datetime/common.hpp
     # Temporary
+    extra/actions/info.hpp
     extra/balancing.hpp
     extra/client.hpp
     extra/log.hpp
     extra/pool.hpp
+    extra/result.hpp
     extra/settings.hpp
     extra/transport.hpp
     extra/queue.hpp
