[Project] Typo fix.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -110,7 +110,7 @@ IF(ENABLE_ELASTICSEARCH)
     )
 
     LINK_DIRECTORIES(
-	${CMAKE_SOURCE_DIR}/swarm
+	${CMAKE_BINARY_DIR}/swarm
     )
 ENDIF()
 
