[Project] Tiny cleanup.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -94,7 +94,7 @@ SET(BOOST_COMPONENTS
 PROJECT(${PROJECT})
 
 INCLUDE_DIRECTORIES(
-    ../
+    ${CMAKE_SOURCE_DIR}/src
     ${CMAKE_SOURCE_DIR}/foreign/rapidjson/include
     SYSTEM ${CMAKE_SOURCE_DIR}/foreign/gmock/include
     SYSTEM ${CMAKE_SOURCE_DIR}/foreign/gtest/include
@@ -104,16 +104,6 @@ LINK_DIRECTORIES(
     ${CMAKE_BINARY_DIR}/gmock/gtest
     ${CMAKE_BINARY_DIR}/gmock
 )
-
-IF(ENABLE_ELASTICSEARCH)
-    INCLUDE_DIRECTORIES(
-	SYSTEM ${CMAKE_SOURCE_DIR}/foreign/swarm
-    )
-
-    LINK_DIRECTORIES(
-	${CMAKE_BINARY_DIR}/swarm
-    )
-ENDIF()
 
 FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
 
@@ -128,6 +118,14 @@ TARGET_LINK_LIBRARIES(${PROJECT}
 )
 
 IF(ENABLE_ELASTICSEARCH)
+    INCLUDE_DIRECTORIES(
+	SYSTEM ${CMAKE_SOURCE_DIR}/foreign/swarm
+    )
+
+    LINK_DIRECTORIES(
+	${CMAKE_BINARY_DIR}/swarm
+    )
+
     TARGET_LINK_LIBRARIES(${PROJECT}
 	swarm
 	swarm_urlfetcher
