[Project] Disable elasticsearch logging by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ OPTION(ENABLE_TESTING "Enable testing" ON)
 OPTION(ENABLE_EXAMPLES "Enable examples" ON)
 OPTION(ENABLE_BENCHMARKING "Enable benchmarking" OFF)
 OPTION(ENABLE_ELASTICSEARCH "Enable elasticsearch sink" OFF)
+OPTION(ENABLE_ELASTICSEARCH_DEBUG "Enable elasticsearch debug" OFF)
 
 CONFIGURE_FILE(
     "${PROJECT_SOURCE_DIR}/config.hpp.in"
