--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -15,6 +15,10 @@ IF(ENABLE_ELASTICSEARCH)
     ADD_DEFINITIONS(-DURDL_DISABLE_SSL=1)
 ENDIF()
 
+IF(NOT ENABLE_ELASTICSEARCH_DEBUG)
+    ADD_DEFINITIONS(-DDISABLE_ELASTICSEARCH_LOGGING=1)
+ENDIF()
+
 file(GLOB_RECURSE BLACKHOLE_HEADERS . ../blackhole/*.hpp)
 file(GLOB_RECURSE BLACKHOLE_TESTING_HEADERS . *.hpp)
 
