[Unit Testing] And another decomposition.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -75,6 +75,7 @@ IF(ENABLE_ELASTICSEARCH)
     SET(ES_SOURCES
 	extra/ElasticsearchSink
 	extra/elasticsearch/Factory
+	extra/elasticsearch/Transport
 	extra/Resolver
 	extra/UrlFetch
     )
