[API] Added scoped logger wrapper, that keeps some attributes until lives.
This commit closes #7.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -15,6 +15,8 @@ IF(ENABLE_ELASTICSEARCH)
     ADD_DEFINITIONS(-DURDL_DISABLE_SSL=1)
 ENDIF()
 
+ADD_DEFINITIONS(-DBLACKHOLE_HEADER_ONLY=1)
+
 IF(NOT ENABLE_ELASTICSEARCH_DEBUG)
     ADD_DEFINITIONS(-DDISABLE_ELASTICSEARCH_LOGGING=1)
 ENDIF()
