[Unit Testing] Wrapper tests should now be built.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -70,6 +70,7 @@ SET(BASE_SOURCES
     test_UdpSink
     test_Utils
     test_VerboseLogger
+    Wrapper
     utils/test_GenericStringFormatter
 )
 
