[Examples] Added elasticsearch example.

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -7,3 +7,4 @@ ADD_SUBDIRECTORY(files)
 ADD_SUBDIRECTORY(syslog)
 ADD_SUBDIRECTORY(logstash)
 ADD_SUBDIRECTORY(init-from-file)
+ADD_SUBDIRECTORY(elasticsearch)
