--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -17,8 +17,8 @@ ENDIF()
 
 ADD_DEFINITIONS(-DBLACKHOLE_HEADER_ONLY=1)
 
-IF(NOT ENABLE_ELASTICSEARCH_DEBUG)
-    ADD_DEFINITIONS(-DDISABLE_ELASTICSEARCH_LOGGING=1)
+IF(ENABLE_ELASTICSEARCH_DEBUG)
+    ADD_DEFINITIONS(-DENABLE_ELASTICSEARCH_DEBUG=1)
 ENDIF()
 
 file(GLOB_RECURSE BLACKHOLE_HEADERS . ../blackhole/*.hpp)
