[Project] Include also implementation files to ease development.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -21,7 +21,7 @@ IF(ENABLE_ELASTICSEARCH_DEBUG)
     ADD_DEFINITIONS(-DENABLE_ELASTICSEARCH_DEBUG=1)
 ENDIF()
 
-file(GLOB_RECURSE BLACKHOLE_HEADERS . ../blackhole/*.hpp)
+file(GLOB_RECURSE BLACKHOLE_HEADERS . ../blackhole/*.[hi]pp)
 file(GLOB_RECURSE BLACKHOLE_TESTING_HEADERS . *.hpp)
 
 SET(HEADERS
