[Config] Function/method export macro variable has been added.

--- a/config.hpp.in
+++ b/config.hpp.in
@@ -6,4 +6,13 @@
 #define BLACKHOLE_VERSION_PATCH ${BLACKHOLE_VERSION_PATCH}
 #cmakedefine BLACKHOLE_DEBUG
 
+#if defined(BLACKHOLE_HEADER_ONLY)
+    #define BLACKHOLE_DECL inline
+#endif
+
+// If BLACKHOLE_DECL isn't defined yet define it now.
+#if !defined(BLACKHOLE_DECL)
+    #define BLACKHOLE_DECL
+#endif
+
 #endif // CONFIG_H
