[Aux] Massive refactoring done over main logger class.

--- a/src/examples/logstash/CMakeLists.txt
+++ b/src/examples/logstash/CMakeLists.txt
@@ -4,6 +4,8 @@ SET(CMAKE_BUILD_TYPE "Debug")
 
 SET(PROJECT blackhole-example-logstash)
 
+ADD_DEFINITIONS(-DBLACKHOLE_HEADER_ONLY=1)
+
 SET(HEADERS
 )
 
