--- a/src/examples/elasticsearch/CMakeLists.txt
+++ b/src/examples/elasticsearch/CMakeLists.txt
@@ -4,6 +4,7 @@ SET(CMAKE_BUILD_TYPE "Debug")
 
 SET(PROJECT blackhole-example-elasticsearch)
 
+ADD_DEFINITIONS(-DBLACKHOLE_HEADER_ONLY=1)
 ADD_DEFINITIONS(-DURDL_HEADER_ONLY=1)
 ADD_DEFINITIONS(-DURDL_DISABLE_SSL=1)
 
