--- a/src/examples/simple/CMakeLists.txt
+++ b/src/examples/simple/CMakeLists.txt
@@ -4,6 +4,8 @@ SET(CMAKE_BUILD_TYPE "Debug")
 
 SET(PROJECT blackhole-example-simple)
 
+ADD_DEFINITIONS(-DBLACKHOLE_HEADER_ONLY=1)
+
 SET(HEADERS
 )
 
